fixing collapse color

--- a/components/skills/skills.module.css
+++ b/components/skills/skills.module.css
@@ -6,6 +6,7 @@
   align-items: center;
   width: 70%;
   min-height: 200px;
+  margin-top: 30px;
 }
 .imgcontainer {
   color: black;
